# CS165

./: .gitignore
Project1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  result.txt
Project1/src/: main.cpp
